[project]
name = "iSee-LIMESegment"
version = "0.0.1"

dependencies = [
    "scipy",
    "numpy",
    "stumpy",
    "scikit-learn",
    "fastdtw",
    "tensorflow",
    "pyts",
    "matplotlib",
    "pandas",
]

description = "A time series explainer for iSee, packaged from https://github.com/TortySivill/LIMESegment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]




[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

